--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,19 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+.metadata 
+bin/ 
+tmp/ 
+*.tmp 
+*.bak 
+*.swp 
+*~.nib 
+local.properties 
+.settings/ 
+.loadpath 
+.recommenders 
+.mvn/*
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
